--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     background-image: url(images/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,7 +23,6 @@ body{
 .container{
     width: 450px;
     height: 290px;
-    min-height: 50%;
     backdrop-filter: blur(50px);
     border-radius: 0.6rem;
     padding: 1rem;
@@ -46,13 +45,28 @@ body{
 
 .shape .circle:first-child{
     background: linear-gradient(to bottom,rgba(255, 0, 255, 0.486),rgb(255, 0, 255));
-    top: -280px;
-    left: -90px;
+    top: -200px;
+    left: -70px;
 }
 .shape .circle:last-child{
     background: linear-gradient(to bottom,blueviolet,rgba(137, 43, 226, 0.741));
-    bottom: -290px;
-    right: -540px;
+    bottom: -210px;
+    right: -510px;
+}
+.shape .round:first-child{
+    background: linear-gradient(to bottom,rgba(255, 0, 255, 0.486),rgb(255, 0, 255));
+    top: -300px;
+    left: -70px;
+}
+
+.shape .round:last-child{
+    background: linear-gradient(to bottom,blueviolet,rgba(137, 43, 226, 0.741));
+    bottom: -300px;
+    right: -510px;
+}
+
+.shape .round,.shape .circle{
+    transition: all 1s;
 }
 
 .container h1{
@@ -108,7 +122,7 @@ p{
 
 .container input:focus{
     border: 1px solid rgb(255, 0, 247);
-    box-shadow:  rgb(255, 0, 247,0.26) 5px -3px 18px,  rgb(255, 0, 247,0.33) -2px 3px 16px;
+    box-shadow:  rgba(255, 0, 247, 0.516) 5px -3px 18px,  rgba(255, 0, 247, 0.796) -2px 3px 16px;
 }
 
 .container input:focus::placeholder{
@@ -208,5 +222,186 @@ p{
 @keyframes smallheight {
     to{
         height: 400px;
+    }
+}
+
+
+@media screen and (max-width:631px){
+    .circle{
+        width: 150px;
+        height: 150px;
+    }
+
+    .shape .circle:first-child{
+        top: -210px;
+        left: -60px;
+    }
+
+    .shape .circle:last-child{
+        bottom: -210px;
+        right: -430px;
+    }
+    .shape .round:first-child{
+        top: -290px;
+        left: -40px;
+    }
+    .shape .round:last-child{
+        bottom: -290px;
+        right: -430px;
+    }
+
+    .container{
+        width: 382px;
+        height: 330px;
+    }
+
+    .input input{
+        font-size: 1.2rem;
+        width: 80%;
+        height: 5vh;
+    }
+
+}
+
+@media screen and (max-width:474px) and (min-width :190px){
+    .container{
+        width: 300px;
+        height: 290px;
+    }
+
+    .container .input input::placeholder{
+        font-size: 0.9rem
+    }
+
+    .container h1:first-child{
+        font-size: 1.3rem;
+    }
+    .container h1:nth-child(2), 
+    .container h3,h5,  
+    .container .input input,
+    .container .input button,
+    .container .red,
+    .container .green{
+        font-size: 1rem;
+    }
+
+    .container p{
+        font-size: 0.8rem;
+    }
+
+    .container .input button{
+        width: 100px;
+    }
+
+    .container .result{
+        padding-top: 0rem;
+    }
+
+    @keyframes height {
+        to{
+            height: 410px;
+        }
+    }
+    @keyframes smallheight {
+        to{
+            height: 350px;
+        }
+    }
+
+    .shape .circle:last-child{
+        right: -340px;
+        bottom: -190px;
+    }
+    .shape .circle:first-child{
+        top: -190px;
+        left: -40px;
+    }
+
+    .shape .circle{
+        width: 120px;
+        height: 120px;
+    }
+
+    .shape .round:first-child{
+        top: -230px;
+    }
+    .shape .round:last-child{
+        bottom: -230px;
+        right: -340px;
+    }
+}
+
+@media screen and (max-width:385px) and (min-width : 190px){
+    .shape .circle{
+        width: 100px;
+        height: 100px;
+    }
+
+    .container{
+        width: 260px;
+    }
+
+    .shape .circle:first-child{
+        top: -180px;
+    }
+    .shape .circle:last-child{
+        bottom: -180px;
+        right: -290px;
+    }
+    .shape .round:first-child{
+        top: -210px;
+    }
+    .shape .round:last-child{
+        bottom: -210px;
+        right: -290px;
+    }
+
+    .container .input input::placeholder{
+        left: 38%;
+    }
+
+    .container .input input{
+        height: 7vh;
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width :295px) and (min-width : 190px){
+    .container{
+        width: 200px;
+    }
+
+    .container h1:nth-child(2){
+        font-size: 0.6rem;
+    }
+
+    .container .input input::placeholder{
+        left: 40%;
+        font-size: 0.7rem;
+    }
+
+    .shape .circle{
+        width: 80px;
+        height: 80px;
+    }
+
+    .shape .circle:first-child{
+        top: -170px;
+        left: -30px;
+    }
+
+    .shape .circle:last-child{
+        right: -230px;
+    }
+
+    .shape .round:first-child
+    {
+        top: -230px;
+    }
+    .shape .round:last-child{
+        bottom: -230px;
+    } 
+    .container .input input{
+        font-size: 1.2rem;
     }
 }
